# DetectorToy

./: cld.yaml  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
src/detectortoy/: .flake8  detectortoy.py  schema.json  tracking.py
tests/: test_detectortoy.py
